# epidemi

./: .gitignore  MANIFEST.in  pyproject.toml  requirements_dev.txt
data/: Oran_2001_2017_medio.txt  clinic_cases.txt  serie_ci_2001_2022.txt
epidemi/: fases_point.py  utils.py
epidemi/core/: fases_point.py  rain_model.py  rain_temp_variation.py  recorrer.py  temp_model.py  temp_variation.py  utils.py
epidemi/data/: gamma_decil.txt  hystoric_alphas.txt  hystoric_rain.txt  hystoric_temp.txt  oran_horaria_98_23.txt
epidemi/data_temp_gamma/: temp_gamma_-0.5.txt  temp_gamma_-1.0.txt  temp_gamma_-1.5.txt  temp_gamma_-2.0.txt  temp_gamma_0.0.txt  temp_gamma_0.5.txt  temp_gamma_1.0.txt  temp_gamma_1.5.txt  temp_gamma_2.0.txt
epidemi/data_temp_gamma_interpolation2/: temp_gamma_interpolation2_-0.5.txt  temp_gamma_interpolation2_-1.0.txt  temp_gamma_interpolation2_-1.5.txt  temp_gamma_interpolation2_-2.0.txt  temp_gamma_interpolation2_0.0.txt  temp_gamma_interpolation2_0.5.txt  temp_gamma_interpolation2_1.0.txt  temp_gamma_interpolation2_1.5.txt  temp_gamma_interpolation2_2.0.txt
epidemi/data_temp_gamma_interpolation4/: temp_gamma_interpolation4_-0.5.txt  temp_gamma_interpolation4_-1.0.txt  temp_gamma_interpolation4_-1.5.txt  temp_gamma_interpolation4_-2.0.txt  temp_gamma_interpolation4_0.0.txt  temp_gamma_interpolation4_0.5.txt  temp_gamma_interpolation4_1.0.txt  temp_gamma_interpolation4_1.5.txt  temp_gamma_interpolation4_2.0.txt
tests/: test_travers.py
